--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@ header{
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    z-index: 4;
+}
+
+@media (width < 320px){
+    .cabecera h1{
+        font-size: 25px;
+    }
 }
 
 .iniciador{
@@ -14,9 +21,10 @@ header{
 }
 
 .logo{
-    width: 100px;
+    width: 100%;
     height: 100px;
-    margin: 10px;
+    margin-top: 10px;
+    margin-left: 20px;
 }
 
 .iniciar{
@@ -28,10 +36,14 @@ header{
     color: black;
 }
 
-@media (width < 540px) {
+@media (width < 800px) {
     header{
         flex-direction: column;
-        align-items: start;
+        align-items: center;
+    }
+
+    .ventas{
+        margin-left: -50px;
     }
 }
 
@@ -62,6 +74,14 @@ main{
     justify-content: space-around;
 }
 
+.titulo{
+    margin-top: -100px;
+}
+
+.contenedor{
+    margin-top: -100px;
+}
+
 .caja1{
     background-color: white;
     margin: 20px 0px;
@@ -71,7 +91,6 @@ main{
     border: 3px solid black;
     border-radius: 5%;
     align-items: center;
-    text-align: center;
 }
 
 .boton{
@@ -96,6 +115,17 @@ main{
     border-radius: 20%;
 }
 
+.recomendado{
+    position: relative;
+    background-color: yellow;
+    border-radius: 20px;
+    width: 100%;
+    text-align: center;
+    top: -110px;
+    width: 100%;
+    left: auto;
+}
+
 .caja2{
     background-color: white;
     margin: 20px 0px;
@@ -105,12 +135,10 @@ main{
     border: 3px solid black;
     border-radius: 5%;
     align-items: center;
-    text-align: center;
 }
 
 .caja2 img{
     width: 80%;
-    height: 80%;
     border-radius: 20%;
 }
 
@@ -127,7 +155,6 @@ main{
     border: 3px solid black;
     border-radius: 5%;
     align-items: center;
-    text-align: center;
 }
 
 .caja3 img{
@@ -144,12 +171,42 @@ main{
     text-align: left;
 }
 
-@media(width < 1700px) {
+.lista1{
+    height: 100px;
+    margin-left: -50px;
+}
+
+.lista2{
+    margin-top: -60px;
+    height: 120px;
+}
+
+.lista3{
+    margin-top: -5px;
+    height: 120px;
+}
+
+.Precio{
+    margin: 0;
+}
+
+.item{
+    list-style-type: "\2611";
+}
+
+
+@media(width < 800px) {
     main {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+    .titulo{
+        margin-top: 50px;
+    }
+    .contenedor{
+        margin-top: 0;
     }
     .caja1{
         width: 90%;
@@ -157,18 +214,15 @@ main{
     .caja2{
         width: 90%;
     }
+    .recomendado{
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        top: -110px;
+        width: 100%;
+        left: auto;
+    }
     .caja3{
         width: 90%;
-    }
-
-    .caja1 img {
-        width: 30%;
-    }
-    .caja2 img {
-        width: 30%;
-    }
-    .caja3 img {
-        width: 30%;
     }
 }
 
@@ -185,7 +239,7 @@ main{
     width: 100%;
 }
 
-@media(width < 1700px) {
+@media(width < 800px) {
     .pie {
         flex-direction: column;
     }
